syntax = "proto3";

option go_package = "github.com/cilium/proxy/go/cilium/api;cilium";

package cilium;

message TestBpfMetadata {
  // 'true' if the filter is on ingress listener, 'false' for egress listener.
  bool is_ingress = 2;
}
